--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -16,6 +16,7 @@ body {
   overflow-x: hidden;
   overflow-y: hidden;
   @include screen-tablet-sm {
+    overflow-x: hidden;
     overflow-y: scroll;
   }
 }
